<resources>
    <string name="app_name">Smartmeter App</string>
    <string name="title_home">Aktuell</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Einstellungen</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="stromverbrauch">Dein aktueller Stromverbrauch</string>
    <string name="mqtt_settings">MQTT Live Verbindung</string>
    <string name="foo_bar">foo/bar</string>
    <string name="subscribe">Subscribe</string>
    <string name="broker_adresse">Broker Adresse</string>
    <string name="apply">Übernehmen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="broker_port">Broker Port</string>
    <string name="title_broker_port">Broker Port</string>
    <string name="topic">Topic</string>
    <string name="title_strompreis">Dein Strompreis</string>
    <string name="strom_preis">Strompreis (Cent/kWh)</string>
    <string name="title_topic">Topic</string>
    <string name="title_passwort">Passwort</string>
    <string name="tab_30min">30min</string>
    <string name="tab_day">Tag</string>
    <string name="tab_week">Woche</string>
    <string name="tab_month">Monat</string>
    <string name="choose_date_short">Auswahl</string>
    <string name="date_range_default">00.00 – 00.00</string>
    <string name="before_yesterday">Vorgestern</string>
    <string name="missing_price">-,—€</string>
    <string name="choose_date">Auswahl</string>
    <string name="power">Leistung</string>
    <string name="empty_power">--,-kWh</string>
    <string name="euro">Euro</string>
    <string name="yesterday">Gestern</string>
    <string name="peak">Maximalwert</string>
    <string name="average">Durchschnitt</string>
    <string name="empty_power_watt">-,—W</string>
    <string name="watt">Watt</string>
    <string name="watthours">Wattstunden</string>
    <string name="chosen">Ausgewählt</string>
    <string name="today">Heute</string>
    <string name="choose_date_title">Datum wählen</string>
    <string name="a_lot">viel</string>
    <string name="minimum">Minimalwert</string>
    <string name="before_last_month">Vorletzter Monat</string>
    <string name="last_month">Letzter Monat</string>
    <string name="last_week">Letzte Woche</string>
    <string name="before_last_week">Vorletzte Woche</string>
    <string name="no_data">Keine Daten</string>
    <string name="datenbank_adresse">Datenbank Adresse</string>
    <string name="datenbank_port">Datenbank Port</string>
    <string name="api_key">API Key</string>
    <string name="strompreis">Strompreis</string>
    <string name="database">Datenbank</string>
    <string name="not_valid_host">ist kein gültiges URL Schema</string>
    <string name="database_host_not_selected">Bitte Datenbankadresse in den Einstellungen angeben</string>
    <string name="mqtt_host_not_selected">Bitte Brokeradresse in den Einstellungen angeben</string>
    <string name="unauthorized">Falscher Datenbank API Schlüssel</string>
    <string name="internal_server_error">Ein Datenbank Serverfehler ist aufgetreten</string>
    <string name="unexpected_error">Ein unerwarteter Datenbank Fehler ist aufgetreten</string>
</resources>