<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.dashboard.DashboardFragment">
    <LinearLayout
        android:id="@+id/conatinerLiveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="14dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="?attr/colorPrimary">
        <TextView
            android:layout_weight="1"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stromverbrauch"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="gravity"
            android:gravity="bottom"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/grey_800"
            android:textColorHighlight="#FD0707"
            android:textColorHint="#FFFFFF" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="38sp"
            android:textColor="@color/white"
            android:text="@string/no_data"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/conatinerLiveData">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_30min"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_day"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_week"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_month"/>
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/dashboard_tab_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tablayout_dashboard">
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




