<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.einstellungen.EinstellungenFragment">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/empty_divider_small">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/mqtt_settings"
                android:textSize="30sp"
                android:autoSizeTextType="uniform" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/broker_adresse">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMQTTBroker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:autofillHints="@string/broker_adresse" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/broker_port">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMQTTPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints="@string/broker_port" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/topic">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMQTTTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:autofillHints="@string/topic" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/username">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMQTTUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:autofillHints="username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMQTTPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints="password" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_marginVertical="5dp"
                android:id="@+id/textViewTitleDatenbank"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/database"
                android:textSize="30sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/datenbank_adresse">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDatenbankHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:autofillHints="password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/datenbank_port">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDatenbankPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints="password" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/api_key">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_weight="1"
                    android:id="@+id/editTextAPIToken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewTitleStrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/title_strompreis"
                android:textAlignment="center"
                android:textSize="30sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="@string/strom_preis">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_weight="1"
                    android:id="@+id/editTextStrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/strom_preis"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_weight="1.1"
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:shadowRadius="3"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:text="@string/apply" />
        </LinearLayout>
</androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>