<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.dashboard.DashboardFragment">
    <LinearLayout
        android:id="@+id/topNavContainer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_move_left"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="5sp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_arrow_circle_left_24" />
        <TextView
            android:id="@+id/text_chart_range"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/date_range_default"
            android:textColor="?attr/colorOnBackground"
            android:textAlignment="center"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_move_right"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="5sp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="?attr/colorPrimary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:icon="@drawable/ic_baseline_arrow_circle_right_24" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_picker_day"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="5sp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:icon="@drawable/ic_baseline_today_24" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_picker_reset"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="5sp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:icon="@drawable/ic_baseline_restore_24" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart_day"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:paddingHorizontal="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/card_conatiner_view"
        app:layout_constraintTop_toBottomOf="@id/topNavContainer" />

    <LinearLayout
        android:id="@+id/card_conatiner_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/bar_chart_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="?attr/colorSecondaryVariant"
            style="@style/Widget.MaterialComponents.CardView">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_tag_auswahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/power"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/grey_300"
                            />
                        <TextView
                            android:id="@+id/text_leistung_auswahl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/empty_power"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/white"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/euro"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/grey_300"
                            android:alpha="300"
                            />
                        <TextView
                            android:id="@+id/text_kosten_auswahl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/missing_price"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/white"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/preis_vorgestern_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                app:cardBackgroundColor="@color/orange_700"
                style="@style/Widget.MaterialComponents.CardView">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/before_yesterday"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:id="@+id/text_strompreis_vorgestern"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="5dp"
                        android:text="@string/missing_price"
                        android:layout_gravity="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/preis_gestern_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:layout_marginHorizontal="5dp"                app:cardBackgroundColor="@color/orange_700"
                style="@style/Widget.MaterialComponents.CardView">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yesterday"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:id="@+id/text_strompreis_gestern"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:paddingTop="5dp"
                        android:layout_weight="1"
                        android:text="@string/missing_price"
                        android:layout_gravity="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>