<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.dashboard.DashboardFragment">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartTest"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:id="@+id/card_conatiner_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/chartTest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/peak_low_container"
        app:layout_constraintTop_toBottomOf="@id/chartTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/preis_vorgestern_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:cardBackgroundColor="?attr/colorSecondaryVariant"
            style="@style/Widget.MaterialComponents.CardView">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minimum"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/text_low"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:text="@string/empty_power_watt"
                    android:layout_gravity="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/text_peak_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:cardBackgroundColor="?attr/colorSecondaryVariant"
            style="@style/Widget.MaterialComponents.CardView">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peak"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/text_peak"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:paddingTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/empty_power_watt"
                    android:layout_gravity="center"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/text_average_card"
        app:layout_constraintTop_toBottomOf="@id/peak_low_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="?attr/colorSecondaryVariant"
        style="@style/Widget.MaterialComponents.CardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/text_average"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingTop="5dp"
                android:layout_weight="1"
                android:text="@string/empty_power_watt"
                android:layout_gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>